examples/test/testpolicy5550.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5550
  namespace: namespace87
spec:
  podSelector:
    matchLabels:
      key39: value31
      key15: value13
      key26: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value16
          key8: value26
          key15: value16
      podSelector:
        matchLabels:
          key43: value43
          key17: value6
          key18: value32
